# ViperBoxInterface

./: .gitignore  .pre-commit-config.yaml  NWB.py  NeuraviperAPI.h  NeuraviperAPI_1_7_x64.lib  NeuraviperAPI_1_8_x64.lib  NeuraviperPy.py  README.html  README.md  README.rst  VB_classes.py  VB_logger.py  ViperBox.py  XML_handler.py  api_classes.py  config.py  custom_exceptions.py  deploy_viperbox_user  environment.yaml  gui.py  install_dependencies.ps1  instructions.xml  known_hosts  main.py  neuraviper_nwb_converter_offline.py  parameters.py  pyproject.toml  requirements.txt  run.bat  set_up_ssh.bat  setup.bat  setup.ps1  start_app.bat  test_viperboxcontrol.py  update.bat  viperboxcontrol.py
.github/workflows/: pre-commit.yaml  toc.yaml
defaults/: default_recording_settings.xml  default_settings.xml  default_stimulation_settings.xml  defaults.py  electrode_mapping_short_cables.xlsx  instructions.xml  settings_classes.json  settings_xml.json  viperboxcontrol_oesettings
docs/source/: conf.py  index.rst  modules.rst  parameters.rst  viperboxcontrol.rst
setup/: download_script.ps1  install.bat  install_dependencies.ps1  installation_script.ps1  setup.bat  update.bat  update.ps1  viperbox.yaml  viperboxV0_0_1.yaml  viperboxcontrol_oesettings.xml
setup/DowngradeFTDI/: downgrade.bat
viperboxinterface/: NeuraviperAPI.h  NeuraviperAPI_1_9_x64.lib  NeuraviperPy.py  VB_classes.py  VB_logger.py  ViperBox.py  XML_handler.py  __init__.py  _version.py  api_classes.py  gui.py  main.py
viperboxinterface/defaults/: default_recording_settings.xml  default_settings.xml  defaults.py  instructions.xml  settings_classes.json  settings_xml.json
